# rustamath_physics

./: Cargo.toml  LICENSE  Makefile  README.md
src/: equations.rs  figure.rs  function.rs  lib.rs  mechanics.rs  regression.rs
src/figure/: circle.rs  rectangle.rs
src/function/: sin.rs  wave.rs
src/mechanics/: linear_motion.rs
src/mechanics/linear_motion/: const_accel.rs  tests.rs
src/regression/: fit.rs  test_circle.rs  test_sine.rs
